<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FC Catcher</string>
	<string name="service_running">Service running...</string>
	<string name="au_l_1">Version 2.1.1(Final)</string>
	<string name="au_l_2">Developer</string>
	<string name="au_l_2_1">Main:Alcatraz,Thanks busstop12 for help</string>
	<string name="au_l_3">View source</string>
	<string name="au_l_4">View in market</string>
	<string name="au_l_4_1">So far in Coolapk</string>
	<string name="pref_0">All settings changes will work after destroying the Activity</string>
	<string name="pref_c1">Overall</string>
	<string name="pref_c1_cb1_title">Keep Notification</string>
	<string name="pref_c1_cb1_summary">Keep a notification to show service state</string>
	<string name="pref_c1_cb2_title">Clean Mode</string>
	<string name="pref_c1_cb2_summary">Kill service when MainActivity is Destroyed</string>
	<string name="pref_c1_cb3_title">Start Service on boot</string>
	<string name="pref_c1_cb3_summary">Start background on boot up</string>
	<string name="pref_c2">Display</string>
	<string name="pref_c2_cb1_title">Single notification</string>
	<string name="pref_c2_cb1_summary">Replace old notificaction,not creating a new one</string>
	<string name="pref_c2_pcr_title">Text Highlight</string>
	<string name="pref_c2_et1_title">Highlight for line</string>
	<string name="pref_c2_et1_hint">RGB(A) color,#xxxxxx</string>
	<string name="pref_c3">Run</string>
	<string name="pref_c3_et1_title">Custom Directory...</string>
	<string name="pref_c3_et1_error">Invalid directory</string>
	<string name="pref_c3_et2_title">PackageFilter(split by quot)</string>
	<string name="pref_c3_cb1_title">Do clean up</string>
	<string name="pref_c3_cb1_summary">Run logcat -c after fc occured</string>
	<string name="pref_c3_cb2_title">No hovering notification</string>
	<string name="pref_c3_child">Show float window directly</string>
	<string name="pref_c3_cb3_title">Empty Notification Panel</string>
	<string name="pref_c3_cb3_summary">No Activity starts after click the notification panel</string>
	<string name="pref_apply">It will be applied when you exit this Activity</string>
	<string name="pref_no_file_chooser">No file chooser</string>
	<string name="already_start">Service already running</string>
	<string name="main_empty">Empty</string>
	<string name="main_menu_1">Settings</string>
	<string name="main_menu_2">About</string>
	<string name="main_menu_3">Restart service</string>
	<string name="main_menu_4">Kill service</string>
	<string name="main_report_bug">Please deliver the error to the address below</string>
	<string name="main_drawer_1_t">Optional</string>
	<string name="main_drawer_1">Simple Terminal</string>
	<string name="main_drawer_2_t">Other</string>
	<string name="main_drawer_2">Report a bug</string>
	<string name="main_drawer_3">Check Update</string>
	<string name="perm_1">Overlay Permission(Float Window)</string>
	<string name="perm_2">Storage</string>
	<string name="perm_denial">How can you deny my request!</string>
	<string name="perm_granted">Permission Granted</string>
	<string name="float_1">Close floatwindow</string>
	<string name="notification_1">Share</string>
	<string name="notification_2">Delete</string>
	<string name="notification_3">Float up</string>
	<string name="terminal_1">Recent Command</string>
	<string name="main_check_failed">Cant check update,please check Internet connection</string>
	<string name="main_check_latest">You are using latest version</string>
	<string name="main_check_not_latest">Update found</string>
	<string name="actionmode_1">Copy</string>
	<string name="actionmode_2">Share</string>
	<string name="actionmode_3">Select All</string>
	<string name="shortcuts_1_long">Start service</string>
	<string name="shortcut_disable">Invalid</string>
	<string name="viewer_1">Save location:</string>
	<string name="viewer_2">Exception type:</string>
	<string name="viewer_3">From:</string>
	<string name="viewer_4">No binary,flash it?(2mb,require root permission)</string>
	<string name="viewer_5">Lack of file</string>
	<string name="viewer_6">All standard error,Addr2line invalid</string>
	<string name="delete_ad_title">Delete</string>
	<string name="ad_pb">Ok</string>
	<string name="ad_nb">Cancel</string>
	<string name="multi_1">Choosed </string>
	<string name="multi_2"> items.</string>
	<string name="delete_ad_msg">Are you sure?</string>
	<string name="delete_ad_pb">Yes</string>
	<string name="delete_ad_nb">No</string>
	<string name="highlight_1">Open saved file(SavedState.sav)</string>
	<string name="highlight_2">Output your preference</string>
	<string name="highlight_3">Edit</string>
	<string name="output_file_existed">File existed</string>
	<string name="output_file_existed_msg">Override?</string>
	<string name="chooser_title">Select file</string>
	<string name="output_file_success">Output at  </string>
	<string name="output_file_failed">Operation failed!</string>
	<string name="main_delete_all">Delete all logs of this app</string>
	<string name="path_null">Path lost,please re open</string>
	<string name="setup_title_1">Welcome!</string>
	<string name="setup_title_2">Lets finish some settings</string>
	<string name="setup_title_3">Color preferences</string>
	<string name="setup_title_4">Logtext highlight</string>
	<string name="setup_step_next">Next</string>
	<string name="setup_step_next_final">Finish</string>
	<string name="setup_step_before">Forward</string>
	<string name="setup_1_1">This app can catch fc infomation with root(Backround takes 30m RAM)</string>
	<string name="setup_1_2">No root,no other uids fc log in normal way!</string>
	<string name="setup_2_1">Keep a notification to show service state</string>
	<string name="setup_2_2">Start service when boot up</string>
	<string name="setup_2_3">Single notice mode</string>
	<string name="setup_3_1">Key line backgroud,RGB(A) color,#xxxxxx</string>
	<string name="setup_3_2">Invalid color</string>
	<string name="setup_4_1">Input from file</string>
	<string name="setup_4_2">Add...</string>
	<string name="setup_4_3">Html node</string>
	<string name="pref_cat_1_list_1">Theme</string>
	<string name="pref_cus">Custom...</string>
	<string name="pref_cus_hint">RGB Color(#xxxxxx)</string>
	<string name="pref_cus_error">Invalid color</string>
	<string name="ad_pb1">Ok</string>
	<string name="ad_nb1">Canel</string>
	<string name="ad_pb2">Yes</string>
	<string name="ad_nb2">No</string>
	<string name="file_pick_1">Choose Directory</string>
	<string name="file_pick_2">Choose File</string>
	<string name="file_pick_3">Folder:</string>
	<string name="file_pick_4">Storage</string>
	<string name="file_pick_5">Please use an empty folder or used to place logs</string>
	<string name="file_pick_6">New Folder</string>
	<string name="file_pick_7">Restarting</string>
	<!-- Version 1.6.0 update log-->
	<string name="setup_title_5">Permissions</string>
	<string name="setup_title_6">Update Log</string>
	<string name="u_1">1.Fixed double service</string>
	<string name="u_2">2.Added actions share,delete,floatwindow to Notification,also allow to access logviewer by notification</string>
	<string name="u_3">3.Float window</string>
	<string name="u_4">4.Android 7.1/Nova Launcher Shortcuts implemention</string>
	<string name="u_5">5.Changed targetApi,use permission request above Api23</string>
	<string name="u_6">6.Simple Terminal</string>
	<string name="u_7">7.Double Drawer(File list changed to right side)</string>
	<string name="u_8">8.Native Exception</string>
	<string name="u_9">9.NightMode</string>
	<string name="u_10">10.Custom save directory</string>
	<string name="u_11">11.Added run logcat -c after caught crash(Preference,Default off)</string>
	<string name="u_12">12.Added language zh-rCN,zh-rTW</string>
	<string name="u_13">13.UI/Bug fixes.</string>
</resources>
