<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <ScrollView
		android:layout_height="match_parent"
		android:layout_width="match_parent"
		android:layout_margin="16dp">

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<TextView
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:layout_width="wrap_content"
				android:text="@string/u_1"/>

			<TextView
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:layout_width="wrap_content"
				android:text="@string/u_2"/>

			<TextView
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:layout_width="wrap_content"
				android:text="@string/u_3"/>

			<TextView
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:layout_width="wrap_content"
				android:text="@string/u_4"/>

			<TextView
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:layout_width="wrap_content"
				android:text="@string/u_5"/>

			<TextView
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:layout_width="wrap_content"
				android:text="@string/u_6"/>

			<TextView
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:layout_width="wrap_content"
				android:text="@string/u_7"/>

			<TextView
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:layout_width="wrap_content"
				android:text="@string/u_8"/>

			<TextView
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:layout_width="wrap_content"
				android:text="@string/u_9"/>

			<TextView
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:layout_width="wrap_content"
				android:text="@string/u_10"/>

			<TextView
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:layout_width="wrap_content"
				android:text="@string/u_11"/>

			<TextView
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:layout_width="wrap_content"
				android:text="@string/u_12"/>

			<TextView
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:layout_width="wrap_content"
				android:text="@string/u_13"/>

		</LinearLayout>

	</ScrollView>
</LinearLayout>
