<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:gravity="center"
	android:background="#B43F1D">

	<TextView
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:layout_width="wrap_content"
		android:text="@string/main_delete_all"/>

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:orientation="horizontal">

		<Button
			style="?android:attr/buttonBarButtonStyle"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/delete_ad_pb"
			android:textColor="#DFDFDF"
			android:id="@+id/listcardactionButton2"/>

		<Button
			style="?android:attr/buttonBarButtonStyle"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/delete_ad_nb"
			android:textColor="#E5E5E5"
			android:id="@+id/listcardactionButton1"/>

	</LinearLayout>

</LinearLayout>

